--- a/src/main/resources/CreateVacation.fxml
+++ b/src/main/resources/CreateVacation.fxml
@@ -9,31 +9,59 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="459.0" prefWidth="648.0" style="-fx-background-color: #5cbcfc;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.CreateVacation">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="459.0" prefWidth="648.0" style="-fx-background-color: #2193d1;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.CreateVacation">
    <children>
       <Label layoutX="16.0" layoutY="87.0" prefHeight="17.0" prefWidth="70.0" text="Origin" textFill="#fdfdfd">
          <font>
             <Font name="System Bold" size="12.0" />
          </font></Label>
-      <TextField fx:id="TextFieldOrigin" layoutX="106.0" layoutY="87.0" promptText="Enter Origin Country" />
-      <Label layoutX="304.0" layoutY="87.0" prefHeight="17.0" prefWidth="70.0" text="Destination" textFill="WHITE" />
-      <Label layoutX="303.0" layoutY="173.0" prefHeight="17.0" prefWidth="43.0" text="Price($)" textFill="WHITE" />
+      <TextField fx:id="TextFieldOrigin" layoutX="115.0" layoutY="87.0" promptText="Enter Origin Country" />
+      <Label layoutX="304.0" layoutY="87.0" prefHeight="17.0" prefWidth="70.0" text="Destination" textFill="WHITE">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font>
+      </Label>
+
+      <Label layoutX="304.0" layoutY="173.0" prefHeight="17.0" prefWidth="51.0" text="Price($)" textFill="WHITE">
+      <font>
+         <Font name="System Bold" size="12.0" />
+      </font>
+   </Label>
       <TextField fx:id="TextFieldPrice" layoutX="381.0" layoutY="169.0" promptText="Enter Price" />
       <TextField fx:id="TextFieldcountryName" layoutX="381.0" layoutY="83.0" promptText="Enter Destination" />
-      <DatePicker fx:id="DeparturesDate" layoutX="108.0" layoutY="125.0" promptText="Chose Departures Date" />
+      <DatePicker fx:id="DeparturesDate" layoutX="115.0" layoutY="125.0" promptText="Chose Departures Date" />
       <DatePicker fx:id="ArrivalsDate" layoutX="381.0" layoutY="125.0" promptText="Chose Arrivals Date" />
-      <Label layoutX="16.0" layoutY="129.0" text="Departures Date" textFill="WHITE" />
-      <Label layoutX="304.0" layoutY="129.0" text="Arrivals Date" textFill="WHITE" />
-      <Button fx:id="ButtonCreate" layoutX="233.0" layoutY="408.0" mnemonicParsing="false" onMouseClicked="#CreateVacation" prefHeight="25.0" prefWidth="141.0" text="Create Vacation" textFill="WHITE" />
+      <Label layoutX="16.0" layoutY="129.0" text="Departures Date" textFill="WHITE">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font>
+      </Label>
+      <Label layoutX="304.0" layoutY="129.0" text="Arrivals Date" textFill="WHITE">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font>
+      </Label>
+      <Button fx:id="ButtonCreate" layoutX="233.0" layoutY="408.0" mnemonicParsing="false" onMouseClicked="#CreateVacation" prefHeight="25.0" prefWidth="141.0" text="Create Vacation" textFill="WHITE">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font></Button>
       <Label layoutX="16.0" layoutY="218.0" text="Tickets Quantity:" textFill="WHITE">
          <font>
             <Font name="System Bold" size="12.0" />
          </font>
       </Label>
       <ComboBox fx:id="ChoiceBoxVacationKind" layoutX="106.0" layoutY="368.0" prefWidth="160.0" promptText="Enter Vacation Kinds" />
-      <Label layoutX="16.0" layoutY="372.0" text="Vacation Kind" textFill="WHITE" />
-      <TextField fx:id="TextFieldAirline" layoutX="108.0" layoutY="169.0" promptText="Enter Airline" />
-      <Label layoutX="18.0" layoutY="173.0" text="Airline" textFill="WHITE" />
+      <Label layoutX="16.0" layoutY="372.0" text="Vacation Kind" textFill="WHITE">
+      <font>
+         <Font name="System Bold" size="12.0" />
+      </font>
+   </Label>
+      <TextField fx:id="TextFieldAirline" layoutX="115.0" layoutY="169.0" promptText="Enter Airline" />
+      <Label layoutX="18.0" layoutY="173.0" text="Airline" textFill="WHITE">
+      <font>
+         <Font name="System Bold" size="12.0" />
+      </font>
+   </Label>
       <!--<ComboBox fx:id="ChoiceBoxTickKind" layoutX="130.0" layoutY="346.0" prefWidth="150.0" />-->
       <!--<Label layoutX="40.0" layoutY="350.0" text="Ticket Kind" />-->
       <CheckBox fx:id="CheckBoxBaggage" layoutX="381.0" layoutY="247.0" mnemonicParsing="false" text="Include Return Flight" textFill="WHITE" />
@@ -42,21 +70,26 @@
       <Button fx:id="ButtonSleepPlace" layoutX="382.0" layoutY="306.0" mnemonicParsing="false" text="Include a place to sleep" textFill="WHITE" />
       <Label layoutX="20.0" layoutY="257.0" text="Adult" textFill="WHITE">
          <font>
-            <Font size="15.0" />
+            <Font name="System Bold" size="15.0" />
          </font>
       </Label>
       <ComboBox fx:id="ComboBoxAdult" layoutX="73.0" layoutY="255.0" prefHeight="25.0" prefWidth="51.0" />
       <Label layoutX="20.0" layoutY="295.0" text="Child" textFill="WHITE">
          <font>
-            <Font size="15.0" />
+            <Font name="System Bold" size="15.0" />
          </font>
       </Label>
       <ComboBox fx:id="ComboBoxChild" layoutX="73.0" layoutY="293.0" prefHeight="25.0" prefWidth="51.0" />
       <Label layoutX="20.0" layoutY="333.0" text="Infant" textFill="WHITE">
          <font>
-            <Font size="15.0" />
+            <Font name="System Bold" size="15.0" />
          </font>
       </Label>
       <ComboBox fx:id="ComboBoxInfant" layoutX="73.0" layoutY="331.0" prefHeight="25.0" prefWidth="51.0" />
+      <Label layoutX="16.0" layoutY="17.0" prefHeight="53.0" prefWidth="288.0" text="Create Vacation" textFill="WHITE">
+         <font>
+            <Font name="System Bold Italic" size="36.0" />
+         </font>
+      </Label>
    </children>
 </AnchorPane>
