--- a/src/main/resources/SearchFlight.fxml
+++ b/src/main/resources/SearchFlight.fxml
@@ -1,38 +1,108 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
-<?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-<?import javafx.scene.control.ComboBox?>
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.SearchFlight">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="505.0" prefWidth="600.0" style="-fx-background-color: #2193d1;" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.SearchFlight">
    <children>
-      <Label layoutX="29.0" layoutY="70.0" prefHeight="17.0" prefWidth="43.0" text="Country" />
-      <TextField promptText="Enter destination" fx:id="TextFieldCountry" layoutX="121.0" layoutY="66.0" onAction="#Country" />
-      <DatePicker promptText="Enter Departures date" fx:id="DatePickerDepartures" layoutX="121.0" layoutY="102.0" onAction="#DateDepartures" />
-      <DatePicker promptText="Enter Arrivals date" fx:id="DatePickerArrivals" layoutX="394.0" layoutY="102.0" onAction="#DateArrivals" />
-      <Label layoutX="29.0" layoutY="106.0" text="Departures Date" />
-      <Label layoutX="317.0" layoutY="106.0" text="Arrivals Date" />
-      <Label layoutX="31.0" layoutY="143.0" text="Tickets Number" />
-      <TextField fx:id="TextFieldTickNum" layoutX="121.0" layoutY="139.0" onAction="#TickNum" prefHeight="25.0" prefWidth="53.0" />
-      <ComboBox promptText="Choose Vacation Kind" fx:id="ChoiceBoxVacationKind" layoutX="121.0" layoutY="252.0" onAction="#VacationKind" prefWidth="150.0" />
-      <Label layoutX="29.0" layoutY="256.0" text="Vacation Kind" />
-      <TextField promptText="Enter Airline" fx:id="TextFieldAirline" layoutX="121.0" layoutY="178.0" onAction="#Airline" />
-      <Label layoutX="31.0" layoutY="182.0" text="Airline" />
-      <ComboBox promptText="Choose Ticket Kind" fx:id="ChoiceBoxTickKind" layoutX="121.0" layoutY="217.0" onAction="#TickKind" prefWidth="150.0">
-         <opaqueInsets>
-            <Insets />
-         </opaqueInsets></ComboBox>
-      <Label layoutX="31.0" layoutY="221.0" text="Ticket Kind" />
-      <CheckBox fx:id="CheckBoxReturnFlight" layoutX="422.0" layoutY="197.0" mnemonicParsing="false" onAction="#ReturnFlight" text="Include Return Flight" />
-      <CheckBox fx:id="CheckBoxBaggage" layoutX="422.0" layoutY="170.0" mnemonicParsing="false" onAction="#Baggage" text="Include baggage" />
-      <CheckBox fx:id="CheckBoxSleepPlace" layoutX="422.0" layoutY="221.0" mnemonicParsing="false" onAction="#SleepPlace" text="Include a place to sleep" />
-      <Button fx:id="SearchButton" onMouseClicked="#searchVacation"  layoutX="230.0" layoutY="348.0" mnemonicParsing="false" onAction="#SearchButton" prefHeight="25.0" prefWidth="141.0" text="Search Flight" />
+      <Label layoutX="29.0" layoutY="99.0" prefHeight="17.0" prefWidth="43.0" text="Origin" textFill="WHITE">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font></Label>
+      <TextField fx:id="TextFieldOriginCountry" layoutX="123.0" layoutY="95.0" onAction="#Country" promptText="Enter Origin" />
+      <DatePicker fx:id="DatePickerDepartures" layoutX="123.0" layoutY="131.0" onAction="#DateDepartures" promptText="Enter Departures Date" />
+      <DatePicker fx:id="DatePickerArrivals" layoutX="396.0" layoutY="131.0" onAction="#DateArrivals" promptText="Enter Arrivals Date" />
+      <Label layoutX="25.0" layoutY="135.0" text="Departures Date" textFill="WHITE">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font></Label>
+      <Label layoutX="319.0" layoutY="135.0" text="Arrivals Date" textFill="WHITE">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font></Label>
+      <Label layoutX="30.0" layoutY="267.0" prefHeight="17.0" prefWidth="110.0" text="Tickets Quantity:" textFill="WHITE">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font></Label>
+      <ComboBox fx:id="ChoiceBoxVacationKind" layoutX="126.0" layoutY="417.0" onAction="#VacationKind" prefHeight="25.0" prefWidth="174.0" promptText="Choose Vacation Kind" />
+      <Label layoutX="34.0" layoutY="421.0" text="Vacation Kind" textFill="WHITE">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font></Label>
+      <TextField fx:id="TextFieldAirline" layoutX="121.0" layoutY="165.0" onAction="#Airline" promptText="Enter Airline" />
+      <Label layoutX="25.0" layoutY="169.0" text="Airline" textFill="WHITE">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font></Label>
+      <CheckBox fx:id="CheckBoxReturnFlight" layoutX="424.0" layoutY="311.0" mnemonicParsing="false" onAction="#ReturnFlight" text="Include Return Flight" textFill="WHITE">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font></CheckBox>
+      <CheckBox fx:id="CheckBoxBaggage" layoutX="424.0" layoutY="284.0" mnemonicParsing="false" onAction="#Baggage" text="Include baggage" textFill="WHITE">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font></CheckBox>
+      <CheckBox fx:id="CheckBoxSleepPlace" layoutX="424.0" layoutY="335.0" mnemonicParsing="false" onAction="#SleepPlace" text="Include a place to sleep" textFill="WHITE">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font></CheckBox>
+      <Button fx:id="SearchButton" layoutX="227.0" layoutY="472.0" mnemonicParsing="false" onAction="#SearchButton" onMouseClicked="#searchVacation" prefHeight="25.0" prefWidth="141.0" text="Search Flight" />
+      <Label layoutX="319.0" layoutY="99.0" prefHeight="17.0" prefWidth="67.0" text="Destination" textFill="WHITE">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font>
+      </Label>
+      <TextField fx:id="TextFieldDestinationCountry" layoutX="396.0" layoutY="95.0" promptText="Enter Destination" />
+      <TextField fx:id="TextMaxPrice" layoutX="276.0" layoutY="223.0" prefHeight="25.0" prefWidth="98.0" />
+      <Label layoutX="250.0" layoutY="227.0" prefHeight="17.0" prefWidth="26.0" text="to" textFill="WHITE">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font>
+      </Label>
+      <Label layoutX="89.0" layoutY="227.0" text="from" textFill="WHITE">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font>
+      </Label>
+      <TextField fx:id="TextMinPrice" layoutX="124.0" layoutY="223.0" prefHeight="25.0" prefWidth="98.0" />
+      <ComboBox fx:id="AdultNumOfTicket" layoutX="105.0" layoutY="293.0" prefHeight="25.0" prefWidth="67.0" />
+      <ComboBox fx:id="ChildNumOfTicket" layoutX="105.0" layoutY="331.0" prefHeight="25.0" prefWidth="67.0" />
+      <ComboBox fx:id="InfantNumOfTicket" layoutX="105.0" layoutY="364.0" prefHeight="25.0" prefWidth="67.0" />
+      <Label layoutX="51.0" layoutY="299.0" prefHeight="17.0" prefWidth="34.0" text="Adult" textFill="WHITE">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font>
+      </Label>
+      <Label layoutX="51.0" layoutY="335.0" prefHeight="17.0" prefWidth="34.0" text="Child" textFill="WHITE">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font>
+      </Label>
+      <Label layoutX="51.0" layoutY="368.0" prefHeight="17.0" prefWidth="43.0" text="Infant" textFill="WHITE">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font>
+      </Label>
+      <Label layoutX="24.0" layoutY="206.0" text="Price Range($) :" textFill="WHITE">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font>
+      </Label>
+      <CheckBox fx:id="CheckNonStopFlight" layoutX="424.0" layoutY="360.0" mnemonicParsing="false" text="Prefer Non-Stop Flight" textFill="WHITE">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font>
+      </CheckBox>
+      <Label layoutX="24.0" layoutY="21.0" prefHeight="53.0" prefWidth="248.0" text="Search Flight" textFill="WHITE">
+         <font>
+            <Font name="System Bold Italic" size="36.0" />
+         </font>
+      </Label>
    </children>
 </AnchorPane>
-
