--- a/src/main/resources/MainPage.fxml
+++ b/src/main/resources/MainPage.fxml
@@ -1,39 +1,48 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.image.Image?>
+<?import javafx.scene.effect.SepiaTone?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<?import javafx.scene.control.PasswordField?>
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: WHITE;" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.MainPageView">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: WHITE;" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.MainPageView">
    <children>
-      <ImageView fx:id="logo" fitHeight="238.0" fitWidth="250.0" layoutX="181.0" layoutY="-38.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="logo" fitHeight="267.0" fitWidth="341.0" layoutX="165.0" layoutY="-68.0" pickOnBounds="true" preserveRatio="true">
 
       </ImageView>
-      <TextField fx:id="usernameTextField" layoutX="225.0" layoutY="128.0" promptText="Username" />
+      <TextField fx:id="usernameTextField" layoutX="234.0" layoutY="218.0" promptText="Username" />
       <!--<TextField fx:id="passwordTextField" layoutX="226.0" layoutY="174.0" promptText="Password" />-->
-      <PasswordField fx:id="passwordTextField" layoutX="226.0" layoutY="174.0" promptText="Password"></PasswordField>
-      <ImageView fx:id="userIcon" fitHeight="25.0" fitWidth="43.0" layoutX="195.0" layoutY="128.0" pickOnBounds="true" preserveRatio="true">
+      <PasswordField fx:id="passwordTextField" layoutX="235.0" layoutY="264.0" promptText="Password" />
+      <ImageView fx:id="userIcon" fitHeight="25.0" fitWidth="43.0" layoutX="204.0" layoutY="218.0" pickOnBounds="true" preserveRatio="true">
 
       </ImageView>
-      <ImageView fx:id="passwordIcon" fitHeight="32.0" fitWidth="32.0" layoutX="193.0" layoutY="171.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="passwordIcon" fitHeight="32.0" fitWidth="32.0" layoutX="202.0" layoutY="261.0" pickOnBounds="true" preserveRatio="true">
 
       </ImageView>
-      <Text fx:id="notRegisteredTextField" layoutX="226.0" layoutY="286.0" onMouseClicked="#NotRegisteredPressed" strokeType="OUTSIDE" strokeWidth="0.0" text="Not registered yet? Click here!">
+      <Text fx:id="notRegisteredTextField" layoutX="235.0" layoutY="376.0" onMouseClicked="#NotRegisteredPressed" strokeType="OUTSIDE" strokeWidth="0.0" text="Not registered yet? Click here!">
          <font>
             <Font size="9.0" />
          </font>
       </Text>
 
-      <Text fx:id="message" layoutX="226.0" layoutY="215" strokeType="OUTSIDE" strokeWidth="0.0" text="" fill="red">
+      <Text fx:id="message" fill="red" layoutX="226.0" layoutY="215" strokeType="OUTSIDE" strokeWidth="0.0" text="">
          <font>
             <Font size="12" />
          </font>
       </Text>
-      <Button fx:id="LoginButton" layoutX="260.0" layoutY="225.0" mnemonicParsing="false" onAction="#LoginPressed" text="Login" />
+      <Button fx:id="LoginButton" layoutX="269.0" layoutY="315.0" mnemonicParsing="false" onAction="#LoginPressed" text="Login" />
+      <Button fx:id="search_button" onMouseClicked="#openSearch" layoutX="184.0" layoutY="120.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="243.0" text="Search for Vacations and Flights!">
+         <effect>
+            <SepiaTone />
+         </effect>
+         <font>
+            <Font name="Forte" size="15.0" />
+         </font>
+      </Button>
+      <ImageView fx:id="airplane_search_img" onMouseClicked="#openSearch" fitHeight="40.0" fitWidth="43.0" layoutX="136.0" layoutY="120.0" pickOnBounds="true" preserveRatio="true" />
    </children>
 </AnchorPane>
