--- a/src/main/resources/HomePage.fxml
+++ b/src/main/resources/HomePage.fxml
@@ -40,7 +40,7 @@
             <Font name="System Bold" size="12.0" />
          </font>
       </Text>
-      <Button fx:id="create_button" layoutX="180.0" layoutY="278.0" mnemonicParsing="false" prefHeight="32.0" prefWidth="137.0" text="Create Vacation" />
-      <ImageView fx:id="airplane_upload" fitHeight="32.0" fitWidth="42.0" layoutX="125.0" layoutY="273.0" pickOnBounds="true" preserveRatio="true" />
+      <Button fx:id="create_button" layoutX="180.0" layoutY="278.0" mnemonicParsing="false" prefHeight="32.0" prefWidth="137.0" text="Create Vacation" onMouseClicked="#openCreateVacation" />
+      <ImageView fx:id="airplane_upload" fitHeight="35.0" fitWidth="45.0" layoutX="125.0" layoutY="273.0" pickOnBounds="true" preserveRatio="true" />
    </children>
 </AnchorPane>
