--- a/src/main/resources/MailBox.fxml
+++ b/src/main/resources/MailBox.fxml
@@ -2,13 +2,11 @@
 
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.MailBoxView">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.MailBoxView">
     <children>
-        <TableView fx:id="messagesTable" layoutX="2.0" layoutY="124.0" prefHeight="230.0" prefWidth="592.0">
+        <TableView fx:id="messagesTable" layoutX="-4.0" prefHeight="400.0" prefWidth="606.0">
             <columns>
                 <TableColumn fx:id="messageColumn" prefWidth="75.0" text="Message" />
                 <TableColumn fx:id="fromColumn" prefWidth="75.0" text="From" />
