--- a/src/main/resources/SearchFlight.fxml
+++ b/src/main/resources/SearchFlight.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="551.0" prefWidth="600.0" style="-fx-background-color: #2193d1;" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.SearchFlight">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="551.0" prefWidth="600.0" style="-fx-background-color: #2193d1;" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.SearchFlight">
    <children>
       <Label layoutX="29.0" layoutY="99.0" prefHeight="17.0" prefWidth="43.0" text="Origin" textFill="WHITE">
          <font>
@@ -66,7 +66,7 @@
             <Font name="System Bold" size="12.0" />
          </font>
       </Label>
-      <TextField fx:id="TextMinPrice" layoutX="124.0" layoutY="223.0" prefHeight="25.0" prefWidth="98.0" />
+      <TextField layoutX="124.0" layoutY="223.0" prefHeight="25.0" prefWidth="98.0" />
       <ComboBox fx:id="AdultNumOfTicket" layoutX="105.0" layoutY="293.0" prefHeight="25.0" prefWidth="67.0" />
       <ComboBox fx:id="ChildNumOfTicket" layoutX="105.0" layoutY="331.0" prefHeight="25.0" prefWidth="67.0" />
       <ComboBox fx:id="InfantNumOfTicket" layoutX="105.0" layoutY="364.0" prefHeight="25.0" prefWidth="67.0" />
@@ -90,7 +90,7 @@
             <Font name="System Bold" size="12.0" />
          </font>
       </Label>
-      <CheckBox fx:id="CheckNonStopFlight" layoutX="424.0" layoutY="334.0" mnemonicParsing="false" text="Prefer Non-Stop Flight" textFill="WHITE">
+      <CheckBox layoutX="424.0" layoutY="334.0" mnemonicParsing="false" text="Prefer Non-Stop Flight" textFill="WHITE">
          <font>
             <Font name="System Bold" size="12.0" />
          </font>
