--- a/src/main/resources/MainPage.fxml
+++ b/src/main/resources/MainPage.fxml
@@ -3,7 +3,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.effect.SepiaTone?>
+<?import javafx.scene.effect.Blend?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
@@ -35,14 +35,14 @@
          </font>
       </Text>
       <Button fx:id="LoginButton" layoutX="269.0" layoutY="315.0" mnemonicParsing="false" onAction="#LoginPressed" text="Login" />
-      <Button fx:id="search_button" layoutX="184.0" layoutY="120.0" mnemonicParsing="false" onMouseClicked="#openSearch" prefHeight="40.0" prefWidth="243.0" text="Search for Vacations and Flights!">
+      <Button fx:id="search_button" layoutX="215.0" layoutY="153.0" mnemonicParsing="false" onMouseClicked="#openSearch" prefHeight="16.0" prefWidth="188.0" text="Search for Vacations and Flights!">
          <effect>
-            <SepiaTone />
+            <Blend />
          </effect>
          <font>
-            <Font name="Forte" size="15.0" />
+            <Font name="Forte" size="12.0" />
          </font>
       </Button>
-      <ImageView fx:id="airplane_search_img" fitHeight="40.0" fitWidth="43.0" layoutX="136.0" layoutY="120.0" onMouseClicked="#openSearch" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="airplane_search_img" fitHeight="40.0" fitWidth="43.0" layoutX="165.0" layoutY="144.0" onMouseClicked="#openSearch" pickOnBounds="true" preserveRatio="true" />
    </children>
 </AnchorPane>
