--- a/src/main/resources/MessageBox.fxml
+++ b/src/main/resources/MessageBox.fxml
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="255.0" prefWidth="600.0" style="-fx-background-color: #2193D1;" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.MessageBoxView">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="322.0" prefWidth="600.0" style="-fx-background-color: #2193D1;" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.MessageBoxView">
    <children>
       <Text fill="WHITE" layoutX="14.0" layoutY="51.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Message" wrappingWidth="240.7877655029297">
          <font>
-            <Font name="Blackadder ITC" size="48.0" />
+            <Font name="Forte" size="48.0" />
          </font>
       </Text>
       <Line endX="575.1715698242188" endY="-7.62939453125E-6" layoutX="33.0" layoutY="77.0" startX="-100.0" stroke="WHITE" strokeWidth="4.0" />
@@ -20,5 +20,8 @@
          </font>
       </Text>
       <Text fx:id="from" fill="WHITE" layoutX="10.0" layoutY="207.0" strokeType="OUTSIDE" strokeWidth="0.0" text="- From " />
+      <Line endX="575.1715698242188" endY="-7.62939453125E-6" layoutX="43.0" layoutY="227.0" startX="-100.0" stroke="WHITE" strokeWidth="4.0" />
+      <Button fx:id="agree_btn" visible="false" onMouseClicked="#doAgree" layoutX="171.0" layoutY="262.0" mnemonicParsing="false" text="Agree" />
+      <Button fx:id="decline_btn" visible="false" onMouseClicked="#doDecline" layoutX="339.0" layoutY="262.0" mnemonicParsing="false" text="Decline" />
    </children>
 </AnchorPane>
