--- a/src/main/resources/HomePage.fxml
+++ b/src/main/resources/HomePage.fxml
@@ -7,11 +7,11 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="410.0" prefWidth="476.0" style="-fx-background-color: WHITE;" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.HomePageView">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="410.0" prefWidth="476.0" style="-fx-background-color: WHITE;" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.HomePageView">
    <children>
       <!--<Button layoutX="180.0" layoutY="170.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="115.0" text="Search Users" onMouseClicked="#searchUser" />-->
       <Button layoutX="59.0" layoutY="370.0" mnemonicParsing="false" onMouseClicked="#deleteUser" prefHeight="25.0" prefWidth="104.0" text="Delete My User" />
-      <Button fx:id="search_button" layoutX="180.0" layoutY="193.0" mnemonicParsing="false" prefHeight="32.0" prefWidth="137.0" text="Search Vacations" />
+      <Button fx:id="search_button" layoutX="180.0" layoutY="193.0" mnemonicParsing="false" onAction="#OpenSearchFlight" prefHeight="32.0" prefWidth="137.0" text="Search Vacations" />
       <ImageView fx:id="settingsImage" fitHeight="43.0" fitWidth="42.0" layoutX="21.0" layoutY="18.0" onMouseClicked="#goToSettings" onMouseEntered="#mouseEnteredSettings" onMouseExited="#mouseExitedSettings" pickOnBounds="true" preserveRatio="true" />
       <Text layoutX="16.0" layoutY="70.0" onMouseClicked="#goToSettings" text="Update Profile">
          <font>
@@ -33,14 +33,14 @@
 
       </ImageView>
       <ImageView fx:id="trashImage" fitHeight="25.0" fitWidth="25.0" layoutX="21.0" layoutY="368.0" pickOnBounds="true" preserveRatio="true"> </ImageView>
-      <ImageView fx:id="email_img" onMouseClicked="#openMailBox" fitHeight="32.0" fitWidth="42.0" layoutX="400.0" layoutY="366.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="email_img" fitHeight="32.0" fitWidth="42.0" layoutX="400.0" layoutY="366.0" onMouseClicked="#openMailBox" pickOnBounds="true" preserveRatio="true" />
       <Circle fx:id="email_circle" fill="#ff2a1f" layoutX="414.0" layoutY="373.0" radius="9.0" stroke="BLACK" strokeType="INSIDE" visible="false" />
       <Text fx:id="email_number" fill="WHITE" layoutX="410.0" layoutY="377.0" strokeType="OUTSIDE" strokeWidth="0.0" text="0" visible="false">
          <font>
             <Font name="System Bold" size="12.0" />
          </font>
       </Text>
-      <Button fx:id="create_button" layoutX="180.0" layoutY="278.0" mnemonicParsing="false" prefHeight="32.0" prefWidth="137.0" text="Create Vacation" onMouseClicked="#openCreateVacation" />
+      <Button fx:id="create_button" layoutX="180.0" layoutY="278.0" mnemonicParsing="false" onMouseClicked="#openCreateVacation" prefHeight="32.0" prefWidth="137.0" text="Create Vacation" />
       <ImageView fx:id="airplane_upload" fitHeight="35.0" fitWidth="45.0" layoutX="125.0" layoutY="273.0" pickOnBounds="true" preserveRatio="true" />
    </children>
 </AnchorPane>
