--- a/src/main/resources/MessageBox.fxml
+++ b/src/main/resources/MessageBox.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
@@ -14,14 +15,19 @@
          </font>
       </Text>
       <Line endX="575.1715698242188" endY="-7.62939453125E-6" layoutX="33.0" layoutY="77.0" startX="-100.0" stroke="WHITE" strokeWidth="4.0" />
-      <Text fx:id="message" fill="WHITE" layoutX="14.0" layoutY="113.0" strokeType="OUTSIDE" strokeWidth="0.0">
+      <Text fx:id="message" fill="WHITE" layoutX="9.0" layoutY="113.0" strokeType="OUTSIDE" strokeWidth="0.0">
          <font>
             <Font size="18.0" />
          </font>
       </Text>
-      <Text fx:id="from" fill="WHITE" layoutX="10.0" layoutY="207.0" strokeType="OUTSIDE" strokeWidth="0.0" text="- From " />
-      <Line endX="575.1715698242188" endY="-7.62939453125E-6" layoutX="43.0" layoutY="227.0" startX="-100.0" stroke="WHITE" strokeWidth="4.0" />
-      <Button fx:id="agree_btn" visible="false" onMouseClicked="#doAgree" layoutX="171.0" layoutY="262.0" mnemonicParsing="false" text="Agree" />
-      <Button fx:id="decline_btn" visible="false" onMouseClicked="#doDecline" layoutX="339.0" layoutY="262.0" mnemonicParsing="false" text="Decline" />
+      <Text fx:id="from" fill="WHITE" layoutX="10.0" layoutY="222.0" strokeType="OUTSIDE" strokeWidth="0.0" text="- From " />
+      <Line endX="575.1715698242188" endY="-7.62939453125E-6" layoutX="43.0" layoutY="237.0" startX="-100.0" stroke="WHITE" strokeWidth="4.0" />
+      <Button fx:id="agree_btn" layoutX="171.0" layoutY="262.0" mnemonicParsing="false" onMouseClicked="#doAgree" text="Agree" visible="false" />
+      <Button fx:id="decline_btn" layoutX="339.0" layoutY="262.0" mnemonicParsing="false" onMouseClicked="#doDecline" text="Decline" visible="false" />
+      <Button fx:id="confirm_phone_btn" layoutX="94.0" layoutY="262.0" mnemonicParsing="false" onMouseClicked="#sendPhoneMessage" text="Confirm" visible="false" />
+      <TextField fx:id="phone_number_txtField" layoutX="162.0" layoutY="262.0" promptText="Enter Phone Number" visible="false" />
+      <Button fx:id="ok_btn" layoutX="271.0" layoutY="262.0" mnemonicParsing="false" onMouseClicked="#okButtonClicked" text="ok" visible="false" />
+      <Text fx:id="vac_details_txt" fill="WHITE" layoutX="10.0" layoutY="138.0" strokeType="OUTSIDE" strokeWidth="0.0" />
+      <Text fx:id="details_txt" fill="WHITE" layoutX="104.0" layoutY="138.0" strokeType="OUTSIDE" strokeWidth="0.0" />
    </children>
 </AnchorPane>
