--- a/src/main/resources/VacationsView.fxml
+++ b/src/main/resources/VacationsView.fxml
@@ -39,7 +39,7 @@
             <Font name="System Bold" size="12.0" />
          </font>
       </Label>
-      <Button fx:id="btnOrderNowV1" layoutX="557.0" layoutY="148.0" mnemonicParsing="false" onAction="#orderVacation" prefHeight="27.0" prefWidth="91.0" text="Order Now" />
+      <Button fx:id="btnOrderNowV1" layoutX="557.0" layoutY="148.0" mnemonicParsing="false" onAction="#orderVacation" prefHeight="27.0" prefWidth="103.0" text="Order Now" />
       <ImageView fitHeight="34.0" fitWidth="36.0" layoutX="326.0" layoutY="127.0" pickOnBounds="true" preserveRatio="true" />
       <Label fx:id="Tairline" layoutX="36.0" layoutY="95.0" text="Airline" textFill="WHITE">
          <font>
@@ -75,6 +75,7 @@
             <Font name="System Bold" size="12.0" />
          </font>
       </Label>
+      <Button layoutX="558.0" layoutY="190.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="103.0" text="Trade Vacations" fx:id="trade_btn" onMouseClicked="#tradeVacations"/>
 
     </children>
 </Pane>
