--- a/src/main/resources/VacationsView.fxml
+++ b/src/main/resources/VacationsView.fxml
@@ -75,7 +75,7 @@
             <Font name="System Bold" size="12.0" />
          </font>
       </Label>
-      <Button layoutX="558.0" layoutY="190.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="103.0" text="Trade Vacations" fx:id="trade_btn" onMouseClicked="#tradeVacations"/>
+      <Button layoutX="558.0" layoutY="190.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="103.0" text="Trade Vacations"  disable="true" fx:id="trade_btn" onMouseClicked="#tradeVacations"/>
 
     </children>
 </Pane>
