--- a/src/main/resources/MessageTradeBox.fxml
+++ b/src/main/resources/MessageTradeBox.fxml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
@@ -24,7 +24,10 @@
       <Line endX="575.1715698242188" endY="-7.62939453125E-6" layoutX="43.0" layoutY="335.0" startX="-100.0" stroke="WHITE" strokeWidth="4.0" />
       <Button fx:id="agree_btn" layoutX="168.0" layoutY="352.0" mnemonicParsing="false" onMouseClicked="#doAgree" text="Agree" visible="false" />
       <Button fx:id="decline_btn" layoutX="337.0" layoutY="352.0" mnemonicParsing="false" onMouseClicked="#doDecline" text="Decline" visible="false" />
-      <Button fx:id="ok_btn" layoutX="271.0" layoutY="262.0" mnemonicParsing="false" onMouseClicked="#okButtonClicked" text="ok" visible="false" />
+      <Button fx:id="ok_btn" layoutX="271.0" layoutY="357.0" mnemonicParsing="false" onMouseClicked="#okButtonClicked" text="ok" visible="false">
+         <opaqueInsets>
+            <Insets top="-5.0" />
+         </opaqueInsets></Button>
       <Text fx:id="vac_details_txt" fill="WHITE" layoutX="10.0" layoutY="138.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Your Vacation:" />
       <Text fx:id="details_txt" fill="WHITE" layoutX="104.0" layoutY="138.0" strokeType="OUTSIDE" strokeWidth="0.0" />
       <Text fx:id="vac_details_txt_otherUser" fill="WHITE" layoutX="10.0" layoutY="232.0" strokeType="OUTSIDE" strokeWidth="0.0" text="User's Vacation:" />
