--- a/src/main/resources/MailBox.fxml
+++ b/src/main/resources/MailBox.fxml
@@ -8,9 +8,9 @@
     <children>
         <TableView fx:id="messagesTable" layoutX="-4.0" prefHeight="400.0" prefWidth="606.0">
             <columns>
-                <TableColumn fx:id="messageColumn" prefWidth="75.0" text="Message" />
-                <TableColumn fx:id="fromColumn" prefWidth="75.0" text="From" />
-                <TableColumn fx:id="seenColumn" prefWidth="75.0" text="Seen" />
+                <TableColumn fx:id="messageColumn" prefWidth="356.6666462421417" text="Message" />
+                <TableColumn fx:id="fromColumn" prefWidth="146.66668701171875" text="From" />
+                <TableColumn fx:id="seenColumn" prefWidth="95.33334350585938" text="Seen" />
             </columns>
         </TableView>
     </children>
